--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,8 +1,10 @@
-@import url('https://fonts.googleapis.com/css2? family= Arimo:ital,wght@0,400;0,500;1,600 &familia = Comfortaa: peso @ 300 & display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,500;1,600&family=Comfortaa:wght@300&display=swap');
+
 
 
 $fontMain:'Arimo', sans-serif;
-$fontSecondary:'Comfortaa', sans-serif;
+$fontSecondary:'Comfortaa', cursive;
+
 
 $textXL:3em;
 $textLg:2em;
