--- a/scss/_navBar.scss
+++ b/scss/_navBar.scss
@@ -1,12 +1,12 @@
 //nesting
 
 #botonera{
-	
 	padding: 0 30px;
 	position: sticky;
 	display:flex;
 	justify-content: space-between;
 	align-items: center;
+	background-color: white;
 	img{
 		width: $w-50;
 	}
