sass y seo desafío

--- a/css/main.css
+++ b/css/main.css
@@ -4,24 +4,33 @@
   margin: 0; }
 
 body {
-  background-color: #DCF54E; }
+  background-color: #08630A; }
 
 footer {
   background-color: white; }
 
-.conocenos__articulo, .conocenos__noticias {
+.conocenos__articulo, .conocenos__noticias, .somos {
   margin: 20px 10px;
   padding: 10px;
   background-color: white;
-  color: #08630A;
-  font-family: "Comfortaa", cursive;
-  font-size: 1em;
-  line-height: 1.4rem; }
-  .conocenos__articulo img, .conocenos__noticias img {
+  height: 400px; }
+  .conocenos__articulo p, .conocenos__noticias p, .somos p {
+    color: #08630A;
+    font-family: "Comfortaa", cursive;
+    font-size: 1em;
+    line-height: 1.4rem;
+    text-align: justify; }
+  .conocenos__articulo img, .conocenos__noticias img, .somos img {
+    margin: 0px auto;
+    display: flex;
+    align-items: center;
     width: 50%; }
 
-.conocenos__noticias {
-  background-color: white; }
+.somos {
+  height: auto; }
+
+.carousel-item img {
+  height: 400px; }
 
 h1 {
   font-size: 3em;
@@ -75,7 +84,7 @@ p {
 
 #main h2 {
   font-size: 2em;
-  color: #08630A; }
+  color: white; }
 
 #main h3 {
   font-size: 1.5em;
