sass y seo desafío

--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -27,7 +27,7 @@ $textRight:right;
 $textLeft:left;
 $textJust:justify;
 
-$mainColor:rgba(30, 133, 2, 0.45);
+$mainColor:#DCF54E;
 $mainColorCuadro: rgba(107, 253, 87, 0.5);
 $secondColor:#8FA804;
 $keyColor:#08630A;
